ajuste no index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com" type="text/javascript"></script>
 </head>
+
 <body>
     <canvas id="snake-bg"></canvas>
     <div class="cursor-glow"></div>
@@ -16,7 +18,8 @@
         <div class="particles-background" id="particlesBackground"></div>
         <button class="theme-toggle" id="themeToggle" aria-label="Alternar tema">
             <div id="themeIconContainer" class="theme-icon-wrapper">
-                <img width="48" height="48" src="https://img.icons8.com/fluency/48/full-moon--v1.png" alt="full-moon--v1" />
+                <img width="48" height="48" src="https://img.icons8.com/fluency/48/full-moon--v1.png"
+                    alt="full-moon--v1" />
             </div>
         </button>
         <header><!-- Sessão de Cabeçalho -->
@@ -66,20 +69,28 @@
                     Engenharia de Dados
                 </div>
                 <h1 id="professionalName">Dávio Carvalho</h1>
-                <p class="subtitle" id="professionalTitle">Engenharia de Dados | Python | GCP | SQL | Oracle | BI | DevOps</p>
-                <p class="hero-description" id="heroDescription">Engenheiro de Dados focado em transformar dados em soluções, atuando na construção de pipelines, automações e dashboards
-                para facilitar a tomada de decisão.</p>
+                <p class="subtitle" id="professionalTitle">Engenharia de Dados | Python | GCP | SQL | Oracle | BI |
+                    DevOps</p>
+                <p class="hero-description" id="heroDescription">Engenheiro de Dados focado em transformar dados em
+                    soluções, atuando na construção de pipelines, automações e dashboards
+                    para facilitar a tomada de decisão.</p>
                 <div class="cta-buttons"><a href="#projects" class="btn btn-primary"> <span><img width="24" height="24"
                                 src="https://img.icons8.com/dusk/64/group-of-projects.png"
                                 alt="group-of-projects" /></span> Ver Projetos </a>
                     <a href="#game" class="btn btn-secondary"> <span><img width="24" height="24"
                                 src="https://img.icons8.com/color/48/controller.png" alt="controller" /></span> Jogar
-                    </a> <a href="https://github.com/Davio27" id="githubBtn" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+                    </a> <a href="https://github.com/Davio27" id="githubBtn" class="btn btn-secondary" target="_blank"
+                        rel="noopener noreferrer">
                         <span><img width="24" height="24" src="https://img.icons8.com/color/48/github-2.png"
                                 alt="github" /></span> GitHub </a>
-                    <a href="https://www.linkedin.com/in/daviocarvalho2001" id="linkedinBtn" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.linkedin.com/in/daviocarvalho2001" id="linkedinBtn" class="btn btn-secondary"
+                        target="_blank" rel="noopener noreferrer">
                         <span><img width="24" height="24" src="https://img.icons8.com/color/48/linkedin-circled--v1.png"
                                 alt="linkedin" /></span> LinkedIn </a>
+                    <a href="https://www.linkedin.com/in/daviocarvalho2001" id="cvBtn" class="btn btn-secondary"
+                        target="_blank" rel="noopener noreferrer">
+                        <span><img width="24" height="24" src="https://img.icons8.com/clouds/100/resume.png"
+                                alt="cv" /></span> Currículo </a>
                 </div>
             </div>
         </header><!-- Sessão Sobre -->
@@ -121,7 +132,9 @@
                 </div>
                 <div class="game-board" id="gameBoard"></div>
                 <div class="flex gap-4">
-                    <button class="game-button" id="startButton"><img width="34" height="34" src="https://img.icons8.com/3d-fluency/94/controller.png" alt="controller" /> Iniciar Jogo</button>
+                    <button class="game-button" id="startButton"><img width="34" height="34"
+                            src="https://img.icons8.com/3d-fluency/94/controller.png" alt="controller" /> Iniciar
+                        Jogo</button>
                     <button class="game-button" id="resetButton" style="display: none;">
                         <img width="34" height="34" src="https://img.icons8.com/office/40/restart.png" alt="restart" />
                         <span>Reiniciar</span>
@@ -133,7 +146,8 @@
             <h2 class="section-title">Competências Técnicas</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3><img width="48" height="48" src="https://img.icons8.com/fluency/48/cloud-database.png" alt="cloud-database" /> Engenharia de Dados &amp; Cloud</h3>
+                    <h3><img width="48" height="48" src="https://img.icons8.com/fluency/48/cloud-database.png"
+                            alt="cloud-database" /> Engenharia de Dados &amp; Cloud</h3>
                     <div class="skill-tags"><span class="skill-tag">Python (Avançado)</span> <span class="skill-tag">SQL
                             Avançado</span> <span class="skill-tag">Google Cloud Platform</span> <span
                             class="skill-tag">BigQuery</span> <span class="skill-tag">Dataform</span> <span
@@ -144,8 +158,9 @@
                 </div>
                 <div class="skill-category">
                     <h3><img width="48" height="48"
-                        src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/external-settings-statistical-analysis-flatart-icons-flat-flatarticons.png"
-                        alt="external-settings-statistical-analysis-flatart-icons-flat-flatarticons" /> DevOps &amp; Automação</h3>
+                            src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/external-settings-statistical-analysis-flatart-icons-flat-flatarticons.png"
+                            alt="external-settings-statistical-analysis-flatart-icons-flat-flatarticons" /> DevOps &amp;
+                        Automação</h3>
                     <div class="skill-tags"><span class="skill-tag">Git &amp; GitHub</span> <span
                             class="skill-tag">GitHub Actions</span> <span class="skill-tag">CI/CD</span> <span
                             class="skill-tag">Linux</span> <span class="skill-tag">Automação Python</span> <span
@@ -153,7 +168,8 @@
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3><img width="48" height="48" src="https://img.icons8.com/color/48/statistics.png" alt="statistics" /> BI &amp; Analytics</h3>
+                    <h3><img width="48" height="48" src="https://img.icons8.com/color/48/statistics.png"
+                            alt="statistics" /> BI &amp; Analytics</h3>
                     <div class="skill-tags"><span class="skill-tag">Power BI</span> <span class="skill-tag">Modelagem de
                             Dados</span> <span class="skill-tag">Dashboards Analíticos</span> <span
                             class="skill-tag">Data Visualization</span> <span class="skill-tag">Business
@@ -216,7 +232,8 @@
                     </div>
                 </div><!-- Project 3 -->
                 <div class="project-card">
-                    <h3><img width="48" height="48" src="https://img.icons8.com/color/48/google-cloud.png" alt="google-cloud" />
+                    <h3><img width="48" height="48" src="https://img.icons8.com/color/48/google-cloud.png"
+                            alt="google-cloud" />
                         Pipelines ELT em GCP</h3>
                     <p>Construção de pipelines ELT robustos utilizando BigQuery, Dataform e Airflow para ambientes
                         analíticos.</p>
@@ -231,8 +248,9 @@
                     </div>
                     <div class="tech-stack"><span class="tech-badge">GCP</span> <span class="tech-badge">BigQuery</span>
                         <span class="tech-badge">Dataform</span> <span class="tech-badge">Airflow</span> <span
-                            class="tech-badge">SQL</span> <span class="tech-badge">Python</span><span class="tech-badge">Functions</span>
-                            <span class="tech-badge">Cloud Run</span>
+                            class="tech-badge">SQL</span> <span class="tech-badge">Python</span><span
+                            class="tech-badge">Functions</span>
+                        <span class="tech-badge">Cloud Run</span>
                     </div>
                     <div class="project-links"><a href="https://github.com/Davio27/Projeto_Rox_School"
                             class="project-link link-github" target="_blank" rel="noopener noreferrer"> <span>💻</span>
@@ -240,7 +258,8 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <h3><img width="48" height="48" src="https://img.icons8.com/fluency/48/system-task.png" alt="system-task" />
+                    <h3><img width="48" height="48" src="https://img.icons8.com/fluency/48/system-task.png"
+                            alt="system-task" />
                         Mockup de Monitoramento Operacionais</h3>
                     <p>Interface web para acompanhamento de pipelines de dados, alertas de falhas e logs de execução em
                         tempo real.</p>
@@ -261,7 +280,9 @@
                         <span class="tech-badge">BigQuery</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/Davio27/-Mockup-de-Monitoramento-Operacionais" class="project-link link-github" target="_blank" rel="noopener noreferrer"><span>💻</span> Detalhes Técnicos</a>
+                        <a href="https://github.com/Davio27/-Mockup-de-Monitoramento-Operacionais"
+                            class="project-link link-github" target="_blank" rel="noopener noreferrer"><span>💻</span>
+                            Detalhes Técnicos</a>
                     </div>
                 </div>
             </div>
@@ -281,7 +302,8 @@
                         </li>
                         <li>Criação de automações de ingestão e integração entre sistemas legados (Oracle) e
                             <strong>BigQuery</strong>,
-                            garantindo a sincronia de dados.</li>
+                            garantindo a sincronia de dados.
+                        </li>
                         <li>Desenvolvimento de <strong>painéis de monitoramento com Flask</strong>, fornecendo
                             visibilidade total sobre
                             a saúde das cargas e falhas de ferramentas.</li>
@@ -333,32 +355,34 @@
             <h2 class="section-title">Formação &amp; Certificações</h2>
             <div class="education-grid">
                 <div class="education-card">
-                    <h3><img width="38" height="38" src="https://img.icons8.com/pin/100/graduation-cap.png" alt="graduation"/>
+                    <h3><img width="38" height="38" src="https://img.icons8.com/pin/100/graduation-cap.png"
+                            alt="graduation" />
                         Técnico em Desenvolvimento de Sistemas</h3>
                     <p>ETEC Bento Quirino</p>
                 </div>
                 <div class="education-card">
-                    <h3><img width="38" height="38" src="https://img.icons8.com/pin/100/graduation-cap.png" alt="graduation"/>
+                    <h3><img width="38" height="38" src="https://img.icons8.com/pin/100/graduation-cap.png"
+                            alt="graduation" />
                         Análise e Desenvolvimento de Sistemas</h3>
                     <p>UniMetrocamp (Graduando)</p>
                 </div>
                 <div class="education-card">
-                    <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses"/>
+                    <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses" />
                         Engenharia de Dados</h3>
                     <p>Udemy</p>
                 </div>
                 <div class="education-card">
-                    <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses"/>
+                    <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses" />
                         Data Warehouse com BigQuery</h3>
                     <p>Rox School</p>
                 </div>
                 <div class="education-card">
-                    <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses"/>
+                    <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses" />
                         Google Cloud Platform</h3>
                     <p>Dataform, Cloud run, Dataflow, Vertex AI, Cloud Storage, Cloud Functions ...</p>
                 </div>
                 <div class="education-card">
-                    <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses"/>
+                    <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses" />
                         Power BI, SQL, Big Data</h3>
                     <p>Fundação Bradesco</p>
                 </div>
@@ -366,10 +390,12 @@
         </section><!-- Rodapé -->
         <footer>
             <div class="footer-content">
-                <div class="social-links"><a href="https://github.com/Davio27" id="footerGithub" class="social-link" target="_blank"
-                        rel="noopener noreferrer" aria-label="GitHub">💻</a> <a href="https://www.linkedin.com/in/daviocarvalho2001" id="footerLinkedin"
-                        class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">💼</a> <a
-                        href="mailto:daviccarvalho11@hotmail.com" id="footerEmail" class="social-link" aria-label="Email">📧</a>
+                <div class="social-links"><a href="https://github.com/Davio27" id="footerGithub" class="social-link"
+                        target="_blank" rel="noopener noreferrer" aria-label="GitHub">💻</a> <a
+                        href="https://www.linkedin.com/in/daviocarvalho2001" id="footerLinkedin" class="social-link"
+                        target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">💼</a> <a
+                        href="mailto:daviccarvalho11@hotmail.com" id="footerEmail" class="social-link"
+                        aria-label="Email">📧</a>
                 </div>
                 <p class="copyright">© 2026 Dávio Carvalho. Todos os direitos reservados.</p>
             </div>
