atualizando o index para mais uma certificacao

--- a/index.html
+++ b/index.html
@@ -386,6 +386,13 @@
                         Power BI, SQL, Big Data</h3>
                     <p>Fundação Bradesco</p>
                 </div>
+                <div class="education-card">
+                    <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses" />
+                        Desenvolvimento
+                        Rápido de Aplicações em Python para Cloud,
+                        IOT E BigData</h3>
+                    <p>UniMetrocamp Wyden</p>
+                </div>
             </div>
         </section><!-- Rodapé -->
         <footer>
