atualizando o index para receber cv

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         target="_blank" rel="noopener noreferrer">
                         <span><img width="24" height="24" src="https://img.icons8.com/color/48/linkedin-circled--v1.png"
                                 alt="linkedin" /></span> LinkedIn </a>
-                    <a href="https://www.linkedin.com/in/daviocarvalho2001" id="cvBtn" class="btn btn-secondary"
+                    <a href="cv/CV2026.pdf" id="cvBtn" class="btn btn-secondary"
                         target="_blank" rel="noopener noreferrer">
                         <span><img width="24" height="24" src="https://img.icons8.com/clouds/100/resume.png"
                                 alt="cv" /></span> Currículo </a>
@@ -163,8 +163,8 @@
                         Automação</h3>
                     <div class="skill-tags"><span class="skill-tag">Git &amp; GitHub</span> <span
                             class="skill-tag">GitHub Actions</span> <span class="skill-tag">CI/CD</span> <span
-                            class="skill-tag">Linux</span> <span class="skill-tag">Automação Python</span> <span
-                            class="skill-tag">APIs REST</span>
+                            class="skill-tag">Linux</span><span class="skill-tag">Jira</span><span class="skill-tag">Confluence</span><span class="skill-tag">Power Automate</span>
+                            <span class="skill-tag">Automação Python</span> <span class="skill-tag">APIs REST</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -317,21 +317,6 @@
                     </ul>
                 </div>
                 <div class="timeline-item">
-                    <h3>Desenvolvedor Web Freelancer</h3>
-                    <p class="company">O Boticário | GioFragrancias</p>
-                    <p class="period">Outubro 2024 — Fevereiro 2025</p>
-                    <ul class="text-sm text-gray-400 mt-2 list-disc ml-4 space-y-2">
-                        <li><strong>Grupo O Boticário:</strong> Desenvolvimento de um Quiz dinâmico para pesquisa de
-                            mercado em eventos,
-                            focado em alta interatividade e coleta de dados.</li>
-                        <li><strong>GioFragrancias:</strong> Criação de um catálogo web interativo para exposição de
-                            produtos e
-                            biotipos, otimizando a experiência de compra digital.</li>
-                        <li>Foco em <strong>UX/UI responsiva</strong> e performance de front-end para ferramentas de
-                            engajamento.</li>
-                    </ul>
-                </div>
-                <div class="timeline-item">
                     <h3>Assistente de TI N1</h3>
                     <p class="company">TermoFibra - Comércio de Isolamento Térmico</p>
                     <p class="period">Janeiro 2022 — Maio 2025 (3 anos e 4 meses)</p>
@@ -347,6 +332,21 @@
                         <li><strong>Suporte Técnico Especializado:</strong> Atendimento N1 focado em alta
                             disponibilidade de sistemas e
                             resolução ágil de problemas críticos de hardware e software.</li>
+                    </ul>
+                </div>
+                <div class="timeline-item">
+                    <h3>Desenvolvedor Web Freelancer</h3>
+                    <p class="company">O Boticário | GioFragrancias</p>
+                    <p class="period">Outubro 2024 — Fevereiro 2025</p>
+                    <ul class="text-sm text-gray-400 mt-2 list-disc ml-4 space-y-2">
+                        <li><strong>Grupo O Boticário:</strong> Desenvolvimento de um Quiz dinâmico para pesquisa de
+                            mercado em eventos,
+                            focado em alta interatividade e coleta de dados.</li>
+                        <li><strong>GioFragrancias:</strong> Criação de um catálogo web interativo para exposição de
+                            produtos e
+                            biotipos, otimizando a experiência de compra digital.</li>
+                        <li>Foco em <strong>UX/UI responsiva</strong> e performance de front-end para ferramentas de
+                            engajamento.</li>
                     </ul>
                 </div>
             </div>
@@ -385,6 +385,11 @@
                     <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses" />
                         Power BI, SQL, Big Data</h3>
                     <p>Fundação Bradesco</p>
+                </div>
+                <div class="education-card">
+                    <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses" />
+                        Python Avançado</h3>
+                    <p>Udemy</p>
                 </div>
                 <div class="education-card">
                     <h3><img width="38" height="38" src="https://img.icons8.com/color/48/courses.png" alt="courses" />
