colocando um contador de acessos

--- a/index.html
+++ b/index.html
@@ -409,6 +409,11 @@
                         href="mailto:daviccarvalho11@hotmail.com" id="footerEmail" class="social-link"
                         aria-label="Email">📧</a>
                 </div>
+                <div class="visitor-counter">
+                    <img width="20" height="20" src="https://img.icons8.com/fluency/48/visible.png" alt="eye-icon" />
+                    <span>Acessos: </span>
+                    <span id="visitCount">...</span>
+                </div>
                 <p class="copyright">© 2026 Dávio Carvalho. Todos os direitos reservados.</p>
             </div>
         </footer>
