colocando um contador de acessos

--- a/index.html
+++ b/index.html
@@ -409,16 +409,17 @@
                         href="mailto:daviccarvalho11@hotmail.com" id="footerEmail" class="social-link"
                         aria-label="Email">📧</a>
                 </div>
-                <div class="visitor-counter">
+                <div class="visitor-counter"
+                    style="display: flex; justify-content: center; gap: 8px; margin-top: 15px; color: #71717a; font-size: 0.9rem;">
                     <img width="20" height="20" src="https://img.icons8.com/fluency/48/visible.png" alt="eye-icon" />
-                    <span>Acessos: </span>
-                    <span id="visitCount">...</span>
+                    <span>Total de Acessos: </span>
+                    <strong id="visitCount" style="color: #3b82f6;">0</strong>
                 </div>
                 <p class="copyright">© 2026 Dávio Carvalho. Todos os direitos reservados.</p>
             </div>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
