--- a/index.html
+++ b/index.html
@@ -291,29 +291,25 @@
             <h2 class="section-title">Experiência Profissional</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <h3>Engenheiro de Dados Jr</h3>
+                    <h3>Engenharia de Dados | Analista I</h3>
                     <p class="company">Oba Hortifruti</p>
-                    <p class="period">Maio 2025 — Presente</p>
+                    <p class="period">Janeiro 2026 — Presente</p>
                     <ul class="text-sm text-gray-400 mt-2 list-disc ml-4 space-y-2">
-                        <li>Estruturação de <strong>Pipelines ELT</strong> robustos no GCP, utilizando <strong>Dataform
-                                (.sqlx,
-                                transform.js)</strong> para transformações e <strong>Apache Airflow (dag.py)</strong>
-                            para orquestração.
-                        </li>
-                        <li>Criação de automações de ingestão e integração entre sistemas legados (Oracle) e
-                            <strong>BigQuery</strong>,
-                            garantindo a sincronia de dados.
-                        </li>
-                        <li>Desenvolvimento de <strong>painéis de monitoramento com Flask</strong>, fornecendo
-                            visibilidade total sobre
-                            a saúde das cargas e falhas de ferramentas.</li>
-                        <li>Implementação de boas práticas de <strong>DevOps</strong> na infraestrutura de dados,
-                            utilizando
-                            <strong>Cloud Run</strong> para deploy de microserviços de integração.
-                        </li>
-                        <li>Suporte à operação analítica e administração do ambiente de BI, garantindo 100% de
-                            disponibilidade para
-                            áreas estratégicas.</li>
+                        <li>Forte atuação no desenvolvimento de <strong>automações e soluções web</strong>, com foco em alta performance e escalabilidade de dados.</li>
+                        <li>Estruturação de pipelines no <strong>GCP</strong>, gerenciando <strong>schemas.json</strong>, transformações complexas no <strong>Dataform (.sqlx)</strong> e orquestração no <strong>Airflow</strong>.</li>
+                        <li>Desenvolvimento de <strong>pipelines ELT robustos</strong>, incluindo camadas de controle de qualidade e ingestão automatizada.</li>
+                        <li>Criação de queries SQL avançadas para <strong>conciliação entre Oracle e BigQuery</strong>, servindo de base para dashboards em Power BI.</li>
+                        <li>Uso estratégico de <strong>Power Automate</strong> para integração de fluxos entre sistemas legados, APIs e ambiente cloud.</li>
+                    </ul>
+                </div>
+                <div class="timeline-item">
+                    <h3>Assistente de TI - Analytics</h3>
+                    <p class="company">Oba Hortifruti</p>
+                    <p class="period">Maio 2025 — Janeiro 2026 (9 meses)</p>
+                    <ul class="text-sm text-gray-400 mt-2 list-disc ml-4 space-y-2">
+                        <li><strong>Administração do ambiente de BI</strong> e suporte à operação analítica, garantindo disponibilidade para áreas estratégicas.</li>
+                        <li>Início da estruturação de pipelines no GCP e automações em <strong>Python (Flask)</strong> para interfaces internas interativas.</li>
+                        <li>Desenvolvimento de integrações focadas em <strong>eficiência operacional</strong> e ganho de produtividade da equipe.</li>
                     </ul>
                 </div>
                 <div class="timeline-item">
