--- a/index.html
+++ b/index.html
@@ -148,12 +148,13 @@
                 <div class="skill-category">
                     <h3><img width="48" height="48" src="https://img.icons8.com/fluency/48/cloud-database.png"
                             alt="cloud-database" /> Engenharia de Dados &amp; Cloud</h3>
-                    <div class="skill-tags"><span class="skill-tag">Python (Avançado)</span> <span class="skill-tag">SQL
-                            Avançado</span> <span class="skill-tag">Google Cloud Platform</span> <span
-                            class="skill-tag">BigQuery</span> <span class="skill-tag">Dataform</span> <span
-                            class="skill-tag">Airflow</span> <span class="skill-tag">Azure</span> <span
-                            class="skill-tag">Oracle Database</span> <span class="skill-tag">Data Warehouse</span> <span
-                            class="skill-tag">ETL / ELT</span> <span class="skill-tag">Big Data</span>
+                    <div class="skill-tags">
+                        <span class="skill-tag">Python (Pandas, Requests, Flask)</span> 
+                        <span class="skill-tag">GCP (Cloud Run, Functions, GCE)</span> 
+                        <span class="skill-tag">Vertex AI (Colab Enterprise)</span>
+                        <span class="skill-tag">BigQuery & Dataform</span> 
+                        <span class="skill-tag">Airflow (DAG Optimization)</span> 
+                        <span class="skill-tag">ETL/ELT Externo & APIs</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -295,12 +296,13 @@
                     <p class="company">Oba Hortifruti</p>
                     <p class="period">Janeiro 2026 — Presente</p>
                     <ul class="text-sm text-gray-400 mt-2 list-disc ml-4 space-y-2">
-                        <li>Forte atuação no desenvolvimento de <strong>automações e soluções web</strong>, com foco em alta performance e escalabilidade de dados.</li>
-                        <li>Estruturação de pipelines no <strong>GCP</strong>, gerenciando <strong>schemas.json</strong>, transformações complexas no <strong>Dataform (.sqlx)</strong> e orquestração no <strong>Airflow</strong>.</li>
-                        <li>Desenvolvimento de <strong>pipelines ELT robustos</strong>, incluindo camadas de controle de qualidade e ingestão automatizada.</li>
-                        <li>Criação de queries SQL avançadas para <strong>conciliação entre Oracle e BigQuery</strong>, servindo de base para dashboards em Power BI.</li>
-                        <li>Uso estratégico de <strong>Power Automate</strong> para integração de fluxos entre sistemas legados, APIs e ambiente cloud.</li>
+                        <li>Desenvolvimento de <strong>automações complexas em Python</strong> para ingestão de dados via APIs e ETLs externos, garantindo a integridade em ambientes híbridos.</li>
+                        <li>Otimização de performance em <strong>DAGs do Airflow</strong>, reduzindo tempo de execução e consumo de recursos no orquestrador.</li>
+                        <li>Arquitetura e deploy de microserviços utilizando <strong>Cloud Run</strong> e <strong>Cloud Functions</strong> para processamento de eventos em tempo real.</li>
+                        <li>Gerenciamento de instâncias no <strong>Compute Engine</strong> para cargas de trabalho pesadas e uso do <strong>Vertex AI (Colab)</strong> para análise exploratória e prototipagem de modelos.</li>
+                        <li>Sincronização entre sistemas legados (Oracle) e <strong>BigQuery</strong> através de pipelines serverless altamente escaláveis.</li>
                     </ul>
+                </div>
                 </div>
                 <div class="timeline-item">
                     <h3>Assistente de TI - Analytics</h3>
